--- a/prct6/Gemfile
+++ b/prct6/Gemfile
@@ -1,4 +1,7 @@
 source "https://rubygems.org"
 
 # Specify your gem's dependencies in prct6.gemspec
+gem 'nokogiri'
+gem 'rack', '~> 2.0.1'
+gem 'rspec'
 gemspec
