--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install: gem install bundler -v 2.0.2
 deploy:
         provider: pages
         skip-cleanup: true
-        github-token: $LPP
+        github-token: $TOKEN-PRCT10
